# ncm811-dopant-selector

./: .gitignore  README.md  dopant_search_labrecipe_rag_feedback.py  pyproject.toml  requirements.txt
ncm811_dopant_selector/: __init__.py  chemistry.py  cli.py  constants.py  data_io.py  models.py  openai_client.py  optional_deps.py  pdf_ingestion.py  pipeline.py  plotting.py  prompts.py  rag.py  schemas.py  selection.py  utils.py
